--- a/package.json
+++ b/package.json
@@ -8,16 +8,35 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@left4code/tw-starter": "^2.0.15",
+    "@fullcalendar/core": "^5.5.1",
+    "@fullcalendar/daygrid": "^5.5.0",
+    "@fullcalendar/interaction": "^5.5.0",
+    "@fullcalendar/list": "^5.5.0",
+    "@fullcalendar/timegrid": "^5.5.1",
+    "@left4code/tw-starter": "^1.1.0",
+    "@popperjs/core": "^2.7.0",
+    "@zhuowenli/vue-feather-icons": "^5.0.2",
+    "cash-dom": "^8.1.0",
     "core-js": "^3.6.5",
+    "dayjs": "^1.10.4",
+    "feather-icons": "^4.28.0",
+    "dropzone": "^5.7.6",
+    "litepicker": "^2.0.11",
+    "tabulator-tables": "^4.9.3",
+    "tiny-slider": "^2.9.3",
     "tippy.js": "^6.3.2",
     "toastify-js": "^1.11.2",
+    "tom-select": "^2.0.0-rc.4",
+    "velocity-animate": "^1.5.2",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0",
-    "vulidate": "^0.2.3"
+    "vulidate": "^0.2.3",
+    "xlsx": "^0.16.9",
+    "zoom-vanilla.js": "^2.0.6"
   },
   "devDependencies": {
+    "@ckeditor/ckeditor5-dev-utils": "^12.0.1",
     "@tailwindcss/postcss7-compat": "^2.2.16",
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
@@ -28,9 +47,14 @@
     "autoprefixer": "^9.8.8",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^7.0.0",
     "postcss": "^7.0.39",
     "postcss-loader": "^4.3.0",
+    "raw-loader": "^4.0.2",
     "sass": "^1.42.1",
     "sass-loader": "^10.1.1",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.2.16",
