--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@fullcalendar/timegrid": "^5.5.1",
     "@left4code/tw-starter": "^1.1.0",
     "@popperjs/core": "^2.7.0",
+    "@vuelidate/core": "^2.0.0-alpha.27",
+    "@vuelidate/validators": "^2.0.0-alpha.23",
     "@zhuowenli/vue-feather-icons": "^5.0.2",
+    "axios": "^0.23.0",
     "cash-dom": "^8.1.0",
     "core-js": "^3.6.5",
     "dayjs": "^1.10.4",
-    "feather-icons": "^4.28.0",
     "dropzone": "^5.7.6",
+    "feather-icons": "^4.28.0",
     "litepicker": "^2.0.11",
     "tabulator-tables": "^4.9.3",
     "tiny-slider": "^2.9.3",
@@ -29,9 +32,9 @@
     "tom-select": "^2.0.0-rc.4",
     "velocity-animate": "^1.5.2",
     "vue": "^3.0.0",
+    "vue-axios": "^3.3.7",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0",
-    "vulidate": "^0.2.3",
     "xlsx": "^0.16.9",
     "zoom-vanilla.js": "^2.0.6"
   },
