add admin home page

--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "vue": "^3.0.0",
     "vue-axios": "^3.3.7",
     "vue-router": "^4.0.0-0",
+    "vue-sweetalert2": "^5.0.2",
     "vuex": "^4.0.0-0",
     "xlsx": "^0.16.9",
     "zoom-vanilla.js": "^2.0.6"
