--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dropzone": "^5.7.6",
     "feather-icons": "^4.28.0",
     "litepicker": "^2.0.11",
+    "moment": "^2.29.1",
     "tabulator-tables": "^4.9.3",
     "tiny-slider": "^2.9.3",
     "tippy.js": "^6.3.2",
@@ -33,6 +34,7 @@
     "velocity-animate": "^1.5.2",
     "vue": "^3.0.0",
     "vue-axios": "^3.3.7",
+    "vue-moment": "^4.1.0",
     "vue-router": "^4.0.0-0",
     "vue-sweetalert2": "^5.0.2",
     "vuex": "^4.0.0-0",
